[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0" # For building the API
dotenvy = "0.15.7" # For managing environment variables
sea-orm = "1.1.2" # Core SeaORM Library
serde = { version = "1.0.216", features = ["derive"] } # For JSON serialization
serde_json = "1.0.133" # For working with JSON
tokio = { version = "1.42.0", features = ["full"] } # Async runtime compatible with Actix and SeaORM
