[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0" # For building the API
dotenv = "0.15.0" # For loading environment variables
env_logger = "0.11.5" # For logging
lazy_static = "1.5.0" # For setting up constants
sea-orm = "1.1.2" # Core SeaORM Library
serde = { version = "1.0.216", features = ["derive"] } # For JSON serialization
serde_json = "1.0.133" # For working with JSON
tokio = { version = "1.42.0", features = ["full"] } # Async runtime compatible with Actix and SeaORM

[[bin]]
name = "api"
path = "src/main.rs"
